# mb_colorpicker_desktop_qt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SmartCute.cmake  build.bat  build.sh
demo/Electron/: index.html  main.js  package.json
demo/NodeJS/: Demo.js
res/: Info.plist.in  res.qrc
src/: main.cxx  resource.cxx
src/ColorPicker/: ColorPickerCanvas.cxx  ColorPickerCanvas.hxx  ColorPickerCanvas.mac.mm  ColorPickerCanvas.win.cxx  ColorPickerHost.cxx  ColorPickerHost.hxx  ColorPickerHost.mac.mm  ColorPickerHost.win.cxx  DaemonModeHost.cxx  DaemonModeHost.hxx  DaemonModeHost.mac.mm  DaemonModeHost.win.cxx  GlobalEventHook.cxx  GlobalEventHook.hxx  GlobalEventHook.mac.mm  GlobalEventHook.win.cxx
